# LJMD_hpc_24_group_3

./: .gitignore  README.md  development.log.txt
01-ljmd/: CMakeLists.txt  LJMDConfig.h.in  README.md
01-ljmd/Obj-serial/: Makefile
01-ljmd/examples/: job_hybrid.sh  job_hybrid2.sh  job_mpi.sh  job_omp.sh
01-ljmd/gtest/examples/: argon_3.inp  argon_3.rest
01-ljmd/gtest/tests/: test_ekin.cpp  test_force.cpp  test_read.cpp  test_read_inp.cpp  test_read_rest.cpp  test_utils.cpp  test_verlet.cpp
01-ljmd/src/: ekin.c  ekin.h  force.c  force.h  ljmd.c  main.c  mdsys.c  mdsys.h  output.c  output.h  read_input.c  read_input.h  utilities.c  utilities.h  verlet.c  verlet.h
01-ljmd_omp/: job.sh
01-ljmd_omp/Obj-serial/: Makefile
01-ljmd_omp/examples/: Makefile  argon_2916_2.inp
01-ljmd_omp/src/: ljmd_omp.c  ljmd_omp_naive.c
